# cyberrecon-ai

./: .env.example  .gitignore  API_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_PUBLISH.md  LINUX_SETUP.md  QUICKSTART.md  README.md  SECURITY.md  WINDOWS_SETUP.md  cyberrecon.py  docker-compose.yml  publish.ps1  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
ai/: __init__.py  analyzer.py
api/: app.py
config/: default.yaml
core/: __init__.py  config.py  constants.py  doctor.py  engine.py  github_downloader.py  reporting.py  storage.py  tool_manager.py  types.py
dashboard/: index.html  package.json  tailwind.config.js
dashboard/src/: App.tsx  styles.css
data/: cyberrecon.db
modules/: __init__.py  base.py  cors.py  idor.py  js_analyzer.py  live_hosts.py  screenshots.py  secret_detector.py  ssrf.py  subdomain_enum.py  tech_detect.py  wayback.py
plugins/: __init__.py  manager.py  sample_plugin.py
utils/: async_runner.py  helpers.py  logger.py
