[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberrecon-ai"
version = "1.0.0"
description = "AI-powered authorized bug bounty reconnaissance framework"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "CyberRecon AI" }]
dependencies = [
  "typer==0.17.4",
  "rich==14.1.0",
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "httpx==0.28.1",
  "aiofiles==24.1.0",
  "playwright==1.55.0",
  "pyyaml==6.0.2",
  "jinja2==3.1.6",
  "python-dotenv==1.1.1",
]

[project.scripts]
cyberrecon = "cyberrecon:app"

[tool.setuptools]
py-modules = ["cyberrecon"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "utils*", "plugins*", "ai*", "api*"]
